--- a/sahabit_apps/pubspec.yaml
+++ b/sahabit_apps/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   image_picker: ^0.8.4+11
   websafe_svg: ^2.1.1
   sign_button: ^2.0.2
+  # introduction_screen: ^1.0.9
+  flutter_onboard: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/introduction/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
